# AycanInsaat

./: .env  .env.production  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: windows-build.yml
public/: manifest.webmanifest
src/: App.tsx  db.ts  index.css  main.tsx  styles.css  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: allow-print.json  default.json  http-remote.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: UI.tsx
src/pages/: Ayarlar.tsx  Hesaplar.tsx  Islemler.tsx  Kisiler.tsx  Login.tsx  Ozet.tsx  ToplamAlacaklar.tsx  ToplamMasraf.tsx  ToplamOdenecekler.tsx  YaklasanOdemeler.tsx
src/services/: rates.ts
